# talecraft-app

./: .gitignore  aaa.json  example.env  manage.py  nginx.conf  pyproject.toml  supervisor.conf  uwsgi.yml
app/: admin.py  consumers.py  models.py  options.py
app/migrations/: 0001_initial.py  0002_marketplacelisting_closed_at.py  0003_alter_marketplacelisting_price.py  0004_alter_marketplacelisting_price.py  0005_leaderboarditem.py  0006_auto_20211222_1638.py  0007_gamechat_gamechatmessage.py  0008_auto_20211227_1816.py  0009_gameleaderboarditem.py  0010_alter_resource_ingredients.py  0011_auto_20220102_2103.py  0012_gameinfo_gameplayer.py  0013_auto_20220117_1440.py  0014_lendinglisting.py  0015_alter_gameleaderboarditem__played_offset_and_more.py  0015_alter_lendinglisting_duration.py
app/schema/: __init__.py  queries.py  types.py
contracts/: .gitignore  brownie-config.yml  build_interfaces.sh  items.csv  items2.csv  items3.csv  items4.csv
contracts/contracts/: ChestSale.sol  CraftStaking.sol  CraftTimeLock.sol  CustomEnumerableMap.sol  DuelStaking.sol  Game.sol  Game2.sol  GameBase.sol  GameLending.sol  GameTournament.sol  GameUpdate.sol  Marketplace.sol  MarketplaceNew.sol  PHI.sol  Resource.sol
contracts/images_utils/: .gitignore  compress_images.py  compress_images.sh  download_images.py
contracts/scripts/: _utils.py  create_vesting.py  deploy.py  deploy_game.py  deploy_marketplace.py  deploy_staking.py  (+15 more)
frontend/: .babelrc  .gitignore  .parcelrc  codegen.yml  index.html  package.json  tsconfig.json  types.d.ts
maintenance/: index.html
talecraft/: asgi.py  crypto.py  settings.py  urls.py  wsgi.py
(+163 files in other folders)
