[tool.poetry]
name = "talecraft"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
eth-brownie = "^1.16.4"
Wand = "^0.6.7"
django-environ = "^0.8.1"
django-redis = "^5.0.0"
uWSGI = "^2.0.20"
psycopg2-binary = "^2.9.2"
django-dbsettings = "^1.1.0"
graphene-django = "^3.0.0b7"
django-spa = "^0.3.5"
django-cors-headers = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
