[tool.poetry]
name = "talecraft"
version = "0.1.0"
description = ""
authors = ["dev <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
Django = "^3.2.7"
eth-brownie = "^1.17.1"
Wand = "^0.6.7"
django-environ = "^0.8.1"
django-redis = "^5.0.0"
uWSGI = "^2.0.20"
psycopg2-binary = "^2.9.2"
django-dbsettings = "^1.1.0"
graphene-django = "^3.0.0b7"
django-spa = "^0.3.5"
django-cors-headers = "^3.10.0"
vyper = "^0.3.0"
channels = "^3.0.4"
channels-redis = "^3.3.1"
daphne = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
